...
                                                    <constraint firstAttribute="height" constant="40" id="Zo7-6R-Zji"/>
                                                </constraints>
                                                <state key="normal" title="UPDATE">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                            <constraint firstAttribute="height" constant="25" id="hKm-GU-bqt"/>
                                        </constraints>
                                        <state key="normal" image="next"/>
                                        <connections>
                                            <segue destination="y2Y-Tz-fCn" kind="show" identifier="sympthonsSegue" id="QUo-wb-PkJ"/>
...
                        <viewLayoutGuide key="safeArea" id="Us1-X9-W1N"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Update" image="pencil.and.ellipsis.rectangle" catalog="system" id="XaL-u4-4Uh"/>
                    <connections>
                        <outlet property="btnUpdate" destination="rBf-Ad-p0N" id="zwn-Um-adj"/>
...
                                <rect key="frame" x="40" y="546" width="116" height="27"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                <state key="normal" title="View Survey Result">
                                    <color key="titleColor" red="0.0109009156" green="0.74780875440000005" blue="0.43524780870000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                </state>
...
                        <viewLayoutGuide key="safeArea" id="egJ-LS-LDT"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Settings" image="gear" catalog="system" id="V75-78-1bT"/>
                    <connections>
                        <outlet property="biometricsIndicator" destination="Jlp-bz-qVi" id="nkg-Nx-Dgx"/>
...
                                <rect key="frame" x="10" y="220" width="355" height="32"/>
                                <segments>
                                    <segment title="By Score"/>
                                    <segment title="By Date"/>
                                </segments>
                                <connections>
...
                                                <segments>
                                                    <segment title="Low"/>
                                                    <segment title="Medium"/>
                                                    <segment title="High"/>
                                                </segments>
                                            </segmentedControl>
...
