...
        alert.addAction(UIAlertAction(title: "Cancel", style: .cancel, handler: nil))
        
        if type == "NEWS"{
            
            alert.addTextField(configurationHandler: {
                txtNewsFiels in
                txtNewsFiels.placeholder = "Enter your news!"
            })
            
        } else if type == "NAME"{
            
            alert.addTextField(configurationHandler: {
                           txtNameFiels in
...
        
        return alert
    }
    
    static func generateAlert(title: String, msg: String) -> UIAlertController {
        let alert = UIAlertController(title: title, message: msg, preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "OK", style: .cancel, handler: nil))
        return alert
    }
    
    static func generateAlertWithoutButton(title: String, msg: String) -> UIAlertController {
        let alert = UIAlertController(title: title, message: msg, preferredStyle: .alert)
        return alert
...
